--- a/src/styles/our-member.css
+++ b/src/styles/our-member.css
@@ -1,5 +1,5 @@
 .single__member {
-  border: 3px solid #7c8a972d;
+  border: 1px solid #7c8a972d;
   border-radius: 4px;
 }
 
@@ -11,37 +11,17 @@
   position: absolute;
   top: -100%;
   left: 50%;
- 
   width: 100%;
   height: 100%;
   background: rgb(0, 13, 107, 0.6);
   transform: translateX(-50%);
   border-radius: 4px;
-  transition: 0.4s ease-in-out;
+  transition: 0.5s ease;
   opacity: 0;
 }
-
-.single__member-social {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  column-gap: 0.5rem;
-  position: absolute;
-  top: -100%;
-  left: 50%;
- 
-  width: 100%;
-  height: 100%;
-  background: rgb(0, 13, 107, 0.6);
-  transform: translateX(-50%);
-  border-radius: 4px;
-  transition: 0.7s ease-in-out;
-  opacity: 0;
-}
-
 
 .single__member-social a i {
-  width: 30px;
+  width: 28px;
   height: 28px;
   color: #000d6b;
   display: flex;
@@ -61,28 +41,13 @@
 .single__member-img {
   position: relative;
   cursor: pointer;
-  
-  height: 200px;
-  width: 200px;
-  
 }
 
 .single__member-img img {
-  border-radius: 9px;
-  height: 100%;
-  width: 100%;
+  border-radius: 4px;
 }
 
 .single__member-img:hover .single__member-social {
   top: 0;
   opacity: 1;
-}
-.single__member-img{
-  height: 200px;
-  width: 100%;
-
-}
-.single__member-img img{
-  width: 100%;
-  height: 100%;
 }
