--- a/src/styles/testimonial.css
+++ b/src/styles/testimonial.css
@@ -1,3 +1,19 @@
+.comment{
+  border: 3px solid blue;
+}
+
+.testimonial{
+  border: red solid 9px ;
+  height: 380px;
+  
+}
+
+.photo {
+  border: 4px solid green;
+}
+.tofwork{
+  border: 4px solid orange;
+}
 @media only screen and (max-width: 768px) {
   .testimonial p {
     font-size: 0.8rem;
