--- a/src/styles/common-section.css
+++ b/src/styles/common-section.css
@@ -1,6 +1,6 @@
 .common__section {
   background: linear-gradient(rgb(0, 13, 107, 0.6), rgb(0, 13, 107, 0.6)),
-    url("../assets/all-images/img4.jpg");
+    url("../assets/all-images/ceremonie.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
